--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.daffy.login_signupmodules_lab2_sagardafle">
+          package="com.example.daffy.Projet_4A_Application">
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.daffy.Projet_4A_Application.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".InitialSetupActivity"></activity>
+        <activity android:name="com.example.daffy.Projet_4A_Application.LoginActivity"></activity>
+        <activity android:name="com.example.daffy.Projet_4A_Application.SignUpActivity"></activity>
+        <activity android:name="com.example.daffy.Projet_4A_Application.InitialSetupActivity"></activity>
     </application>
 
 </manifest>
