--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:screenOrientation="portrait" />
 
         <service android:name=".service.SynchroService" />
+        <service android:name=".service.UpdateUserService" />
 
         <activity
             android:name=".activities.MenuStudentActivity"
