--- a/Website/package.json
+++ b/Website/package.json
@@ -16,9 +16,11 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
+    "generate-password": "^1.4.0",
     "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "node-xlsx": "^0.12.0",
+    "nodemailer": "^4.6.5",
     "pg": "^7.4.3",
     "sequelize": "^4.37.7"
   }
