--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.androidtutorialshub.application">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".helpers.UserApp"
@@ -11,7 +14,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        android:name=".MyApplication"
         <activity
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
@@ -48,6 +50,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.androidtutorialshub.application.activities.LoginActivity" />
         </activity>
+        <activity android:name=".service.CustomWifiManager" />
+
+        <receiver android:name=".handler.CustomHandler" />
     </application>
 
 </manifest>
